ShaderManagerをシングルトンから解放

--- a/Cumulonimbus.vcxproj.filters
+++ b/Cumulonimbus.vcxproj.filters
@@ -2,121 +2,121 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <FxCompile Include="Shader\3d_standard_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\3d_standard_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\convolution_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\cook_torrance_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\cook_torrance_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\cpu_particle_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\cpu_particle_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\depth_extraction_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\depth_extraction_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\diffuse_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\diffuse_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\gaussian_blur_convolution_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\gaussian_blur_downsampling_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\gaussian_blur_horizontal_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\gaussian_blur_vertical_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\glow_extraction_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\monochrome_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\outline_extraction_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\phong_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\phong_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\reflection_mapping_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\reflection_mapping_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\refraction_mapping_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\refraction_mapping_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\shadow_map_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\shadow_map_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\single_color_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\single_color_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\sky_box_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\sky_box_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\sorbel_filter_convolution_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\spot_light_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\spot_light_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\sprite2d_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\sprite2d_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\standard_sprite_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\standard_sprite_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\toon_ps.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
     <FxCompile Include="Shader\toon_vs.hlsl">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
@@ -338,46 +338,46 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\3d_standard.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\bloom.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\cook_torrance.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\diffuse.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\functions.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\general.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\monochrome.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\phong.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\shadow_map.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\single_color.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\sorbel_filter.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\spot_light.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\sprite2d.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
     <None Include="Shader\toon.hlsli">
-      <Filter>Shader</Filter>
+      <Filter>Shader%28HLSL%29</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -393,8 +393,14 @@
     <Filter Include="Header\Scene">
       <UniqueIdentifier>{fdb9ee14-712f-404b-aa91-9250cc62dfdd}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Shader">
+    <Filter Include="Shader%28HLSL%29">
       <UniqueIdentifier>{502b13e1-5329-4d21-9ab3-7b11b51e65a7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Shader%28.cpp%29">
+      <UniqueIdentifier>{9caec17c-7fc9-4117-8575-ed9a48531c9b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header\Shader%28.h%29">
+      <UniqueIdentifier>{9055ecd8-3f54-4989-8ba7-9c486755e70d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
