--- a/Cumulonimbus.vcxproj.filters
+++ b/Cumulonimbus.vcxproj.filters
@@ -225,6 +225,9 @@
       <Filter>Source\Scene</Filter>
     </ClCompile>
     <ClCompile Include="Source\Engine\dx11_configurator.cpp" />
+    <ClCompile Include="Source\Engine\gaussian_blur.cpp">
+      <Filter>Source\Shader%28.cpp%29</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Libraries\imgui\imconfig.h" />
@@ -332,6 +335,9 @@
       <Filter>Header\Scene</Filter>
     </ClInclude>
     <ClInclude Include="Source\Engine\dx11_configurator.h" />
+    <ClInclude Include="Source\Engine\gaussian_blur.h">
+      <Filter>Header\Shader%28.h%29</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Cumulonimbus.rc" />
