--- a/Cumulonimbus.vcxproj.filters
+++ b/Cumulonimbus.vcxproj.filters
@@ -391,6 +391,9 @@
     <None Include="Shader\toon.hlsli">
       <Filter>Shader%28HLSL%29</Filter>
     </None>
+    <None Include="Shader\shadow_functions.hlsli">
+      <Filter>Shader%28HLSL%29</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header">
